--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -18,6 +18,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.7</version>
+    </dependency>
+    <dependency>
       <groupId>edu.juniorplus</groupId>
       <artifactId>domain</artifactId>
       <version>1.0</version>
