--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>domain</artifactId>
       <version>1.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
