--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -22,6 +22,18 @@
       <artifactId>dao</artifactId>
       <version>1.0</version>
     </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.12.1</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
